deploy/network.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.1.0.0/16" # ip addresses that will be available in our network
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    local.common_tags,
    tomap({ Name = "${local.prefix}-vpc" })
  )
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    local.common_tags,
    tomap({ Name = "${local.prefix}-main" })
  )
}
